--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "foroco/php-browser-detection",
     "type": "library",
-    "description": "Ultra fast PHP library to detect browser, OS, platform and device type by User-Agent parsing.",
+    "description": "Ultra fast PHP library to detect browser, OS, platform and device type by User-Agent parsing",
     "keywords": ["user-agent","php","browser","detection","environment","useragent"],
     "homepage": "https://github.com/foroco/php-browser-detection",
     "license": "MIT",
